--- a/sm-core/pom.xml
+++ b/sm-core/pom.xml
@@ -302,6 +302,11 @@
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>4.2.12.RELEASE</version>
+        </dependency>
     </dependencies>
 
 	<build>
